--- a/.github/workflows/archive-trac.yml
+++ b/.github/workflows/archive-trac.yml
@@ -1,3 +1,5 @@
+name: IETF Trac Archiver
+
 on:
   workflow_dispatch:
   
@@ -17,5 +19,5 @@ jobs:
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: archive.tgz
-        path: trac.ietf.org
+        name: trac_archive
+        path: trac.ietf.org.tgz
